# samuengine

./: Cargo.toml  README.md  build.rs
src/: camera.rs  light.rs  main.rs  object.rs  samumath.rs  transform.rs
src/resources/shaders/: phong.frag  phong.vert  simple.frag  simple.vert
